--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
       <style> body {  margin: 0; } </style>
-      <script src='./index.js'></script>
+      <script  src='./index.js'></script>
+      <script type="module" src='./clienttest.js'></script>
   </head>
   <body>
-      
+      HELLO
+      <img src="saki.jpg">
   </body>
 </html>
