--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <style> body {  margin: 0; } </style>
-      <script  src='./index.js'></script>
-      <script type="module" src='./clienttest.js'></script>
+    <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-      HELLO
-      <img src="saki.jpg">
+    <div id="background">
+      123456
+      <!--<img src="./saki.jpg">-->
+    </div>
   </body>
 </html>
